--- a/index3ccd.html
+++ b/index3ccd.html
@@ -579,7 +579,7 @@
 													</svg>Our Clients</span></a></li>
 										<li
 											class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7779">
-											<a href="index8917.html?page_id=3138"><span
+											<a href="faq.php?page_id=3138"><span
 													class="qodef-menu-item-text"><svg
 														class="qodef-svg--plus qodef-menu-item-plus"
 														xmlns="http://www.w3.org/2000/svg"
@@ -1198,7 +1198,7 @@
 														transform="translate(6)" />
 												</svg>Our Clients</span></a></li>
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7779">
-										<a href="index8917.html?page_id=3138"><span class="qodef-menu-item-text"><svg
+										<a href="faq.php?page_id=3138"><span class="qodef-menu-item-text"><svg
 													class="qodef-svg--plus qodef-menu-item-plus"
 													xmlns="http://www.w3.org/2000/svg"
 													xmlns:xlink="http://www.w3.org/1999/xlink" width="14" height="14"
