--- a/pages/iindex.html
+++ b/pages/iindex.html
@@ -1282,7 +1282,7 @@
                       <li
                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7779"
                       >
-                        <a href="index8917.html?page_id=3138"
+                        <a href="faq.php?page_id=3138"
                           ><span class="qodef-menu-item-text"
                             ><svg
                               class="qodef-svg--plus qodef-menu-item-plus"
@@ -2559,7 +2559,7 @@
                         <li
                           class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7779"
                         >
-                          <a href="index8917.html?page_id=3138"
+                          <a href="faq.php?page_id=3138"
                             ><span class="qodef-menu-item-text"
                               ><svg
                                 class="qodef-svg--plus qodef-menu-item-plus"
@@ -3708,7 +3708,7 @@
                     <li
                       class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7779"
                     >
-                      <a href="index8917.html?page_id=3138"
+                      <a href="faq.php?page_id=3138"
                         ><span class="qodef-menu-item-text"
                           ><svg
                             class="qodef-svg--plus qodef-menu-item-plus"
